<resources>
    <string name="app_name">Picme</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    <string name="automatically_save_images">Automatically Save Images</string>

    <string name="request">Request</string>
    <string name="send">Send</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="log_in">Log In</string>
    <string name="search_by_username">Search By Username</string>
    <string name="no_received_images_yet">No Received Images Yet</string>
</resources>
