<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="70dp"
        android:src="@drawable/profilepic_default"
        android:layout_height="70dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/text_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:text="@string/change_profile_picture"
        android:background="?attr/selectableItemBackgroundBorderless"
       />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/automatically_save_images"
            android:textSize="16sp"
            />
        <Switch
            android:id="@+id/switch_auto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/text_logout"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#c71010"
        android:text="@string/log_out"
        android:background="?attr/selectableItemBackgroundBorderless"
        />

</LinearLayout>