<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wordpress.necessitateapps.picme.LoginActivity"
    android:background="@drawable/gradient"
   >


    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/edit_name_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:focusableInTouchMode="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:fontFamily="sans-serif"
            android:backgroundTint="#fff"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/edit_pass_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:backgroundTint="#fff"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/button_login"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimary"
            android:background="#fff"
            />
        <TextView
            android:text="@string/register"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_gotoregister"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="16sp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:visibility="gone">
        <EditText
            android:id="@+id/edit_name_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:focusableInTouchMode="true"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:fontFamily="sans-serif"
            android:backgroundTint="#fff"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/edit_email_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:backgroundTint="#fff"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/edit_pass_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:backgroundTint="#fff"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/button_register"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:background="#fff"
            />
        <ImageView
            android:padding="15dp"
            android:textColor="#ffffff"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/image_clear"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_clear"
            />
    </LinearLayout>

</RelativeLayout>
